--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -12,14 +12,14 @@
 	<div class="row">
 	<h1>Our Menu</h1>
   <div class="col-lg-4 col-md-6 col-sm-12" id="container">
-    <p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Deserunt ab quia eum possimus debitis illo consequuntur cum impedit! Non hic ratione minus reiciendis esse laboriosam rem fugit, quam ut iure!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut dui id est commodo aliquam. Vestibulum finibus ex id purus pulvinar, ut rhoncus leo facilisis,Suspendisse potenti. Vivamus viverra purus efficitur, iaculis sem nec egestas erat.</p>
   	<p id="p1">Chicken</p>
 
   	</div>
 
   
 
-  <div class="col-lg-4 col-md-6 col-sm-12" id="container"><p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Quis, iste, nostrum dignissimos unde officiis doloremque debitis fugit ut! Voluptate odit nam unde harum aliquam aperiam quibusdam quod corrupti provident pariatur!</p>
+  <div class="col-lg-4 col-md-6 col-sm-12" id="container"><p>Mauris semper libero orci, at interdum eros mattis in. Morbi lobortis est ante, in faucibus purus maximus quis. Pellentesque molestie sit amet turpis eu malesuada. In feugiat pharetra ligula, eget hendrerit neque mattis et. Integer sed ipsum quis tellus accumsan luctus. </p>
 
   	<p id="p2">Beef</p>
 
